<?xml version="1.0"?>
<package>
  <name>toolModel</name>
  <version>0.0.0</version>
  <description>The toolModel package</description>
  
  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="rxh349@todo.todo">rxh349</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!--build_depend>cv_bridge</build_depend -->
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cwru_opencv_common</build_depend>
  <build_depend>vesselness_image_filter_cpu</build_depend>

  <!--run_depend>cv_bridge</run_depend -->
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>cwru_opencv_common</run_depend>
  <run_depend>vesselness_image_filter_cpu</run_depend>

</package>
    
